pinecone and mongodb vector operation done

--- a/05.React.js/7.Crud operation with react app and mongodb using Vector Search/Web/src/components/home/home.css
+++ b/05.React.js/7.Crud operation with react app and mongodb using Vector Search/Web/src/components/home/home.css
@@ -4,6 +4,14 @@
     box-sizing: border-box;
 }
 
+.form-header {
+    display: flex;
+    justify-content: space-between;
+}
+
+.search-form {
+    margin: 4rem 2rem 0 0;
+}
 
 .weather-card {
     height: 100%;
